# stark

./: Cargo.toml  Trunk.toml  build.rs  design.md  index.html  leptosfmt.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: pages.yml  test.yml
public/: styles.css
src/: copy_scaled.wgsl  debug.rs  geom.rs  lib.rs  main.rs  test.rs  wgpu_context.rs
src/components/: brush_setting.rs  canvas.rs  canvas.wgsl  color_picker.rs  fallback.rs  keyboard_state.rs  mod.rs  panel.rs  render_canvas.rs  render_context_provider.rs  render_surface.rs
src/engine/: airbrush.rs  atlas.rs  atlas.wgsl  embedded_shapes.rs  mod.rs  process_shape.rs  raster.rs  stroke.rs  tile.rs
src/pages/: mod.rs
src/render/: canvas.wgsl  context.rs  drawing.wgsl  mod.rs  pipeline_builder.rs  resources.rs  source.rs  wrappers.rs
src/renderables/: mod.rs  shaders.wgsl
src/shaders/: airbrush.wgsl  atlas.wgsl  canvas.wgsl  chart.wgsl  chart_internal.wgsl  color_picker.wgsl  copy_transform.wgsl  depth_to_layers.wgsl  dither.wgsl  drawing.wgsl  horizontal_scan.wgsl  interface.rs  internal.rs  layers_to_depth.wgsl  log_transform.wgsl  mod.rs  oklab.wgsl  tile_data.wgsl  tile_read.wgsl  tile_read_internal.wgsl  tile_write.wgsl  tile_write_internal.wgsl
src/util/: callback.rs  callback_future.rs  clothoid.rs  distinct.rs  distinct_signal.rs  distinct_trigger.rs  image.rs  input_interpolate.rs  leptos_try.rs  map_signal.rs  mod.rs  oklab.rs  once.rs  piecewise_linear.rs  promise.rs  result_ext.rs  try_callback.rs  yolo.rs
tests/: wasm.rs
