[package]
name = "stark"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-once-cell = "0.5"
futures = "0.3"
itertools = "0.13"
leptos = "0.6"
leptos_meta = "0.6"
leptos_router = "0.6"
leptos-use = "0.12"
# tap = "1.0"
thiserror = "1.0"
# This is included only so we can set the "release_max_level_warn" feature.
log = { version = "*", features = ["release_max_level_warn"], optional = true }
static_assertions = "1.1.0"
tracing = { version = "0.1", features = ["release_max_level_warn"] }
tracing-log = { version = "0.2", optional = true }
tracing-subscriber = "0.3"
wgpu = { version = "22.1" }
bytemuck = { version = "1.16", features = ["derive"] }
encase = { version = "0.9.0", features = ["glam"] }
glam = { version = "0.28.0", features = ["bytemuck"] }

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = [
	"HtmlCanvasElement",
	"ResizeObserverEntry",
	"ResizeObserverSize",
] }
pollster = "0.3"
png = "0.17"
image = { version = "0.25", default_features = false, features = ["png"] }

[build-dependencies]
# wgsl_to_wgpu = "0.10"
wgsl_to_wgpu = { path = "deps/wgsl_to_wgpu/wgsl_to_wgpu" }

# I'm not sure what the best way to configure dependencies is. In theory,
# targeting WASM and running in the client are orthogonal. For now, we put
# anything documented to be WASM-specific in here and use the "csr" feature
# to gate dependencies that we only need when running in the client.
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
tracing-wasm = { version = "0.2", optional = true }
# wasm-timer = { version = "0.2", optional = true }

[features]
default = ["csr"]
csr = [
	"dep:tracing-wasm",
	# "dep:wasm-timer",
	"dep:console_error_panic_hook",
	"leptos/csr",
	"leptos_meta/csr",
	"leptos_router/csr",
	# Enable this to support older browsers.
	# "wgpu/webgl",
]
# Enable the "log" feature only if we include libraries that depend on it.
# Our code will use "tracing" exclusively.
log = ["dep:log", "dep:tracing-log", "tracing/log"]

[profile.min-size-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
lib-profile-release = "min-size-release"

[package.metadata.wasm-pack]
lib-profile-release = "min-size-release"
