[package]
name = "stark"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-once-cell = "0.5"
futures = "0.3"
itertools = "0.13"
leptos = { version = "0.7.0-beta5" }
leptos_meta = { version = "0.7.0-beta5" }
leptos_router = { version = "0.7.0-beta5" }
leptos-use = { git = "https://github.com/Synphonyte/leptos-use.git", branch = "leptos-0.7" }
# tap = "1.0"
thiserror = "1.0"
# This is included only so we can set the "release_max_level_warn" feature.
log = { version = "*", features = ["release_max_level_warn"], optional = true }
static_assertions = "1.1.0"
tracing = { version = "0.1", features = ["release_max_level_warn"] }
tracing-log = { version = "0.2", optional = true }
tracing-subscriber = "0.3"
# We could enable the "webgl" feature to support older browsers.
wgpu = { version = "22.1", features = ["fragile-send-sync-non-atomic-wasm"] }
bytemuck = { version = "1.17", features = ["derive"] }
encase = { version = "0.9.0", features = ["glam"] }
# This must match the version supported by encase.
glam = { version = "0.28", features = ["bytemuck"] }
wgsl_to_wgpu_macro = { path = "deps/wgsl_to_wgpu_macro", features = ["track_path"]}
fastrand = "2.1"
thaw = { git = "https://github.com/thaw-ui/thaw.git" }
send_wrapper = "0.6"
csscolorparser = "0.7"

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = [
	"HtmlCanvasElement",
	"ResizeObserverEntry",
	"ResizeObserverSize",
] }
pollster = "0.3"
png = "0.17"
image = { version = "0.25", default_features = false, features = ["png"] }

# I'm not sure what the best way to configure dependencies is. In theory,
# targeting WASM and running in the client are orthogonal. For now, we put
# anything documented to be WASM-specific in here and use the "csr" feature
# to gate dependencies that we only need when running in the client.
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
tracing-wasm = { version = "0.2", optional = true }

[features]
default = ["csr"]
csr = [
	"dep:tracing-wasm",
	"dep:console_error_panic_hook",
	"leptos/csr",
	"thaw/csr",
]
# Enable the "log" feature only if we include libraries that depend on it.
# Our code will use "tracing" exclusively.
log = ["dep:log", "dep:tracing-log", "tracing/log"]

[profile.min-size-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
lib-profile-release = "min-size-release"

[package.metadata.wasm-pack]
lib-profile-release = "min-size-release"
