[package]
name = "stark"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
futures = "0.3"
itertools = "0.13"
leptos = { version = "0.7.0-beta5" }
leptos_meta = { version = "0.7.0-beta5" }
leptos_router = { version = "0.7.0-beta5" }
leptos-use = { git = "https://github.com/Synphonyte/leptos-use.git", branch = "leptos-0.7" }
# tap = "1.0"
thiserror = "1.0"
# This is included only so we can set the "release_max_level_warn" feature.
log = { version = "*", features = ["release_max_level_warn"], optional = true }
static_assertions = "1.1.0"
tracing = { version = "0.1", features = ["release_max_level_warn"] }
tracing-log = { version = "0.2", optional = true }
tracing-subscriber = "0.3"
wgpu = { version = "22.1", features = [
	# Enable the "webgl" feature to support older browsers.
	"webgl",
	# We only have a single thread in WASM, so make everything Send+Sync.
	"fragile-send-sync-non-atomic-wasm",
] }
bytemuck = { version = "1.17", features = ["derive", "extern_crate_alloc"] }
encase = { version = "0.9.0", features = ["glam"] }
# This must match the version supported by encase.
glam = { version = "0.28", features = ["bytemuck"] }
wgsl_to_wgpu_macro = { path = "deps/wgsl_to_wgpu_macro", features = [
	"track_path",
] }
fastrand = "2.1"
thaw = { git = "https://github.com/thaw-ui/thaw.git" }
send_wrapper = "0.6"
csscolorparser = "0.7"
half = { version = "2.4", features = ["bytemuck"] }
ordered-float = { version = "4.2", features = ["bytemuck"] }
bon = "2.3"
base64 = { version = "0.22", optional = true }
derive_more = { version = "1.0", features = ["display"] }
zune-image = { version = "0.4", default-features = false, features = [
	"log",
	"png",
	"simd",
	# We don't actually need metadata, but zune-image fails to build without it.
	"metadata",
] }
zune-core = { version = "0.4", default-features = false }
fresnel = "0.1"

# Used for cubic interpolation. I also tried out `totsu` and `quadprog`, but this was the fastest and most stable.
clarabel = { version = "0", no-default-features = true, features = ["wasm"] }

[patch.crates-io]
# Clarabel on crates.io doesn't compile without the "serde" feature.
clarabel = { git = "https://github.com/cbbowen/Clarabel.rs.git" }

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = [
	"HtmlCanvasElement",
	"ResizeObserverEntry",
	"ResizeObserverSize",
] }
pollster = "0.3"
approx = "0.5"

# I'm not sure what the best way to configure dependencies is. In theory,
# targeting WASM and running in the client are orthogonal. For now, we put
# anything documented to be WASM-specific in here and use the "csr" feature
# to gate dependencies that we only need when running in the client.
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
tracing-wasm = { version = "0.2", optional = true }

[features]
default = ["csr", "log"]
csr = [
	"dep:tracing-wasm",
	"dep:console_error_panic_hook",
	"leptos/csr",
	"thaw/csr",
]
# Enable the "log" feature only if we include libraries that depend on it.
# Our code will use "tracing" exclusively.
log = ["dep:log", "dep:tracing-log", "tracing/log"]
debug = [
	# "dep:png",
	"dep:base64",
]

[profile.test]
default = ["debug"]

# Optimize `clarabel` even in `dev` builds.
# https://doc.rust-lang.org/nightly/cargo/reference/profiles.html#overrides
[profile.dev.package.clarabel]
opt-level = 2

[profile.min-size-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
lib-profile-release = "min-size-release"

[package.metadata.wasm-pack]
lib-profile-release = "min-size-release"
